Refactor EntryListTransferHandler: replace min/max logic with clamp for improved clarity